--- a/src/home/Home.css
+++ b/src/home/Home.css
@@ -1,9 +1,3 @@
-@import url("https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap");
-
-#root {
-  font-family: Inter, Haettenschweiler, "Arial Narrow Bold", sans-serif;
-}
-
 .orange_theme {
   color: #e76f51;
 }
